--- a/app/views/items.html
+++ b/app/views/items.html
@@ -73,7 +73,7 @@
           <h3 class="itemtype"></h3>
       </div>
       <div id="item-details" ng-hide="isloading">
-      <img  id="itemimagesrc" height="100%" width="100%">
+      <img  id="itemimagesrc" style='max-height: 100%; max-width: 100%; object-fit: contain; text-align:center;'>
       <div class="list-item itemdisplaytext" >
 
       </div>
