--- a/app/css/index.css
+++ b/app/css/index.css
@@ -24,7 +24,7 @@ body{
     margin: 0px;
     position: absolute;
     z-index: 0;
-    overflow: hidden;
+    /*overflow: hidden;*/
 	-webkit-overflow-scrolling: touch;
 }
 
