--- a/app/css/index.css
+++ b/app/css/index.css
@@ -619,6 +619,9 @@ main {
     float: left;
     position: fixed;
     z-index: 9;
+		overflow: scroll;
+-webkit-overflow-scrolling: touch;
+
 }
 
 .resources {
