--- a/app/views/items.html
+++ b/app/views/items.html
@@ -111,7 +111,7 @@
 </div>
 <script src="js/grid-list-view.js"></script>
 
-    <div id="resources-footer">
+    <div id="resources-footer" class="resources-footer">
         <div id="resources-footer-main" ng-bind-html="footer">
 
         </div>
