--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,7 +1,7 @@
 <!-- RESOURCES INFORMATION -->
 
 <div class="resources" id="listresource">
-  <div id="resources-header">
+  <div id="featured-header">
     <h1 style="width:90%;">{{list.title}}</h1>
     <a ng-href="#/topics/" class="secondary-close"><img src="img/icon_close.png" height="100%" width="100%" /></a>
   </div>
@@ -90,7 +90,7 @@
       </div>
       <img src="img/icon_close.png" height="100%" width="100%" class="tertiary-close"/>
   </div>
-  <div id="resources-footer" >
+  <div id="featured-footer" >
       <div id="resources-footer-main" ng-bind-html="footer">
 
       </div>
