--- a/app/views/items.html
+++ b/app/views/items.html
@@ -136,7 +136,7 @@
   $('.base-nav li:nth-child(3)').css({
       'opacity': '1',
   });
-
+  $('.grid-trigger').attr('href','/#/');
 });
 </script>
 <script src="js/popup_main.js"></script>
