--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -64,6 +64,6 @@
     $('.base-nav li:nth-child(3)').css({
       'opacity': '0.5',
     });
-    $('.grid-trigger').attr('href','./#/');
+    $('.grid-trigger').attr('href','#/');
   });
 </script>
